[gd_scene load_steps=5 format=2]

[ext_resource path="res://player_spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 27.0
height = 12.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 15 )
shape = SubResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="LevelCompleteTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.7

[connection signal="timeout" from="LevelCompleteTimer" to="." method="_on_LevelCompleteTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
